# se2-calculator-project

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  manage.py  nginx.conf  pyproject.toml
app/: conftest.py
app/blocks/: admin.py  test_templatetags.py  test_views.py  tests.py  urls.py  views.py
app/components/: admin.py
app/ores/: forms.py  models.py
app/se2CalcProject/: asgi.py  urls.py
app/templates/: base.html  home.html
blocks/: forms.py  models.py  test_forms.py  tests.py  tests_fixtures.py
blocks/fixtures/: sample_blocks.json
blocks/migrations/: 0002_add_pcu_cost.py
blocks/templatetags/: block_filters.py
components/: forms.py  models.py  test_views.py  tests_fixtures.py  urls.py  views.py
components/fixtures/: sample_components.json
components/templatetags/: component_filters.py
docs/design/: appsDesign.md  page_elements.md
docs/devEnvSetup/: uv_installation.md
docs/enhancementRequests/: README.md  enhancementRequestTemplate.md
docs/projectPlan/: checklist.md  overview.md  phase1_models.md  phase2_recommendations.md  phase2_views.md  phase3_buildorder.md  phase4_testing.md  technical_specs.md
ores/: admin.py  apps.py  models.py  test_views.py  tests.py  tests_fixtures.py  urls.py  views.py
ores/fixtures/: sample_ores.json
scripts/: README.md  generate_django_secret.py  generate_fixture_uuids.py
scripts/utils/: README.md  secrets_gen.py  (+2 more)
se2CalcProject/: settings.py  urls.py  wsgi.py
templates/: base.html  home.html
tests/: README.md
(+106 files in other folders)
