[project]
name = "se2-calculator-project"
version = "0.4.2-alpha"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.13.2",
    "crispy-bootstrap5>=2025.6",
    "django>=6.0.1",
    "django-crispy-forms>=2.5",
    "psycopg2-binary>=2.9.11",
    "pytest-django>=4.11.1",
    "python-dotenv>=1.2.1",
    "tblib>=3.2.2",
    "uuid-utils>=0.13.0",
    "uuid7>=0.1.0",
]
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "se2CalcProject.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["app"]
addopts = "--reuse-db --nomigrations"